# ssscrypt

./: .gitignore  AI.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/rulesets/: main.json  tags.json
.github/workflows/: audit.yml  ci.yml  release.yml
data/: wordlist_1024.txt
docs/: ANNOUNCEMENT.md  DEMO.md
scripts/: cull_wordlist.py  pre-push  setup-hooks.sh
src/: cmd.rs  collector.rs  crypto.rs  encrypted.rs  io.rs  main.rs  mnemonic.rs  qr.rs  share.rs  sss.rs  x509.rs
