[package]
name = "ssscrypt"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Encrypt files with Shamir secret sharing — split the key into QR cards with mnemonic backup words. Designed for offline PKI ceremonies."
repository = "https://github.com/k-forss/ssscrypt"
homepage = "https://github.com/k-forss/ssscrypt"
readme = "README.md"
keywords = ["shamir", "secret-sharing", "encryption", "pki", "qr-code"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
blake3 = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }

# X.509 certificate generation
rcgen = { version = "0.14", features = ["x509-parser"] }
time = { version = "0.3", features = ["macros", "formatting"] }

# QR share card rendering + scanning
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
font8x8 = "0.3"
rqrr = "0.10"

# Live camera QR scanning (graceful runtime fallback if no camera)
nokhwa = { version = "0.10", features = ["input-native"] }
eframe = { version = "0.33", default-features = false, features = ["glow", "x11", "wayland"] }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland"] }
crossterm = "0.29"

[profile.release]
lto = true
codegen-units = 1
